✢ Motorized and Mechanized Infantry manpower requirement lowered from 1200 to 1050
✢ Custom Division Names for Trade Federation, Romau, Nova Griffonia and Feathesia 
✢ News Events for Aquiliean Revolution
✢ Griffonian Republic can no longer annex Equestria diplomatically
✢ Griffonian Republic can actually switch to Harmony
✢ President-Marshal Kemerskai is the prettiest bird in the world.
✢ Fixed even MORE crash to desktop errors.
✢ Nightmare Moon Supporters now actually gain cores on all of Equestria if they restore the Lunar Empire instead of the failed Lunar Empire getting them.
✢ Everyone hates Maarites again.
✢ Changelings can only attempt to puppet Olenia if Olenia is Neutral.
✢ Larger countries benefit slightly more from Military Training Decisions
✢ Disabled Tutorial button.
✢ Spellchecking
✢ Aquiliea, Vedina and Griffonian Republic now start with minor navies.
✢ Minor map edit in Eastern Griffonia.
✢ Removed the fat mountain chain in Nova Griffonia.
✢ AI templates updated for new pure infantry meta.
✢ Hjortsling takes control of Olenia when they are forcibly puppeted by the Changelings.
✢ Expanded Maar path for Greifwald
✢ More gfx
✢ Other miscellaneous fixes and improvements


⚔ “Knights and Flowers” 1.0.4🌼

✦Fixes and additions:
✢ Fixed a crash to desktop
✢ Fixed some nations liking the Dread League
✢ Fixes to Palace of the Soviets of course ( ͡° ͜ʖ ͡°)
✢ Fixed Dread League not being able to declare wars during the Black Crusade
✢ Detached countries can't join factions anymore
✢ Army order icons are ponyfied
✢ Changes to Changeling focus tree:
 - They can get bonuses for taking over Equestria
 - Hive improvement focuses
 - Wargoals on Griffonia
✢ Changes to Equestrian focus tree:
- Changes to southern development focuses
✢ Protectorate decisions for Changelings
✢ More cosmetic tags for Changeling puppets
✢ Equestrian is now able to annex Dark Wing's Stalliongradian Autonomy
✢ Removed unfinished neutrality path from Crystal Empire