@@ -33,7 +33,8 @@ GRW_default_plan = {
 	}
 
 	ideas = {
-
+		GRW_Theresa_2 = 30
+		GRW_Theresa = 15
 	}
 
 	# Keep small, as it is used as a factor for some things (such as research needs)
@@ -113,22 +114,22 @@ GRW_post_war_historical = {
 	}
 	abort = {
 		GRY = {
-			has_war = yes
+			has_war_with = ROOT
 		}
 		GRU = {
-			has_war = yes
+			has_war_with = ROOT
 		}
 		LUS = {
-			has_war = yes
+			has_war_with = ROOT
 		}
 		BAN = {
-			has_war = yes
+			has_war_with = ROOT
 		}
 	}
 	ai_national_focuses = {
 		GRW_find_the_prince
-		GRW_fate_of_the_lord
 		GRW_root_out_supporters
+		GRW_fate_of_the_lord
 		GRW_victory_in_civil_war
 		GRW_industrial_buildup
 		GRW_reformation_of_agriculture
@@ -139,11 +140,16 @@ GRW_post_war_historical = {
 		GRW_defense_industry
 		GRW_enter_modern_age
 		GRW_steel_works
-		GRW_fight_the_bandits
+		GRW_secure_our_borders
 		GRW_political_line
 		GRW_protectionism
 		GRW_infrastructure_effort
 		GRW_industry_effort
+		GRW_innovation_focus_protec
+		GRW_modernization_protec_focus
+		GRW_focus_on_defense
+		GRW_protection_from_enemies
+		GRW_national_guard
 	}
 	focus_factors = {
 
