@@ -21,6 +21,7 @@ GRW_defense_of_the_revolution = {
 			BAN = { has_government = communism }
 			is_subject = no
 			BAN = { is_subject = no }
+			BAN = { exists = yes }
 		}
 		complete_effect = {
 			country_event = {
@@ -114,7 +115,7 @@ GRW_defense_of_the_revolution = {
 				385 = { is_controlled_by = GRW }
 			}
 		}
-		cost = 20
+		cost = 10
 		ai_will_do = {
 			factor = 20
 		}
@@ -628,9 +629,9 @@ GRW_transformation_to_modern_society = {
 		available = {
 			OR = {
 				has_completed_focus = GRW_modernization_focus
+				has_country_flag = modernization_available
 				date > 1013.3.5
 				owns_major_griffon_city = yes
-				has_completed_focus = GRW_protectionism
 			}
 		}
 		cost = 5
@@ -666,7 +667,7 @@ GRW_transformation_to_modern_society = {
 			OR = {
 				has_completed_focus = GRW_modernization_focus
 				owns_major_griffon_city = yes
-				has_completed_focus = GRW_protectionism
+				has_country_flag = modernization_available
 			}
 		}
 		cost = 5
