@@ -1882,4 +1882,62 @@ ideas = {
 			}
 		}
 	}
+	country = {
+		GRW_fortification_focus = {
+			picture = fortification_focus
+			allowed = {
+				always = yes
+			}
+			available = {
+				NOT = {
+					has_war = yes
+				}
+			}
+			removal_cost = -1
+			
+			modifier = {
+				production_speed_bunker_factor = 0.15
+				production_speed_anti_air_building_factor = 0.15
+			}
+		}
+	}
+	country = {
+		GRW_national_guard = {
+			picture = FRA_scw_intervention_nationalists_focus
+			allowed = {
+				always = yes
+			}
+			available = {
+				NOT = {
+					has_war = yes
+				}
+			}
+			removal_cost = -1
+			
+			modifier = {
+				conscription_factor = 0.1
+				training_time_army_factor = -0.1
+			}
+		}
+	}
+	country = {
+		GRW_research_center_idea = {
+			picture = FRA_national_mobilization_focus
+			allowed = {
+				always = yes
+			}
+			available = {
+				NOT = {
+					has_war = yes
+				}
+			}
+			removal_cost = -1
+			research_bonus = {
+				electronics = 0.05
+			}
+			modifier = {
+				research_time_factor = -0.05
+			}
+		}
+	}
 }
