@@ -7,6 +7,7 @@ focus_tree = {
 			tag = GRW
 		}
 	}
+	continuous_focus_position = { x = 10 y = 1180 }
 	default = no
 	focus = {
 		id = GRW_militia
@@ -242,7 +243,7 @@ focus_tree = {
 	focus = {
 		id = GRW_ricefield_training
 		icon = GFX_goal_griffon_rice
-		cost = 10.00
+		cost = 4
 		prerequisite = {
 			focus = GRW_militia
 		}
@@ -548,7 +549,7 @@ focus_tree = {
 		id = GRW_fight_the_bandits
 		icon = GFX_goal_GRF_commies_win
 		cost = 6
-		x = 12
+		x = 15
 		y = 2
 		available = {
 			has_global_flag = prywhen_civil_war_is_over
@@ -579,10 +580,10 @@ focus_tree = {
 		icon = GFX_goal_generic_military_sphere
 		cost = 10.00
 		prerequisite = {
-			focus = GRW_fight_the_bandits
 		}
-		x = 10
-		y = 3
+		relative_position_id = GRW_fight_the_bandits
+		x = -2
+		y = 0
 		ai_will_do = {
 			factor = 1
 		}
@@ -604,6 +605,7 @@ focus_tree = {
 		cost = 5
 		prerequisite = {
 			focus = GRW_fight_the_bandits
+			focus = GRW_secure_our_borders
 		}
 		ai_will_do = {
 			factor = 3
@@ -626,7 +628,7 @@ focus_tree = {
 				has_war_with = BRF
 			}
 		}
-		x = 12
+		x = 13
 		y = 3
 		completion_reward = {
 			add_political_power = 130
@@ -673,6 +675,8 @@ focus_tree = {
 		x = 9
 		y = 5
 		completion_reward = {
+			add_political_power = 20
+			add_stability = 0.05
 			one_random_infrastructure = yes
 			one_random_infrastructure = yes
 			one_random_infrastructure = yes
@@ -692,10 +696,127 @@ focus_tree = {
 		x = 9
 		y = 6
 		completion_reward = {
+			add_stability = 0.05
 			two_random_industrial_complex = yes
 		}
 	}
-	
+
+	focus = {
+		id = GRW_focus_on_defense
+		icon = GFX_goal_generic_construct_mil_factory
+		cost = 10.00
+		prerequisite = {
+			focus = GRW_industry_effort
+		}
+		ai_will_do = {
+			factor = 2
+		}
+		relative_position_id = GRW_industry_effort
+		x = 0
+		y = 1
+		completion_reward = {
+			two_random_arms_factory = yes
+		}
+	}
+
+	focus = {
+		id = GRW_protection_from_enemies
+		icon = GFX_goal_generic_defence
+		cost = 10.00
+		prerequisite = {
+			focus = GRW_industry_effort
+		}
+		ai_will_do = {
+			factor = 2
+		}
+		relative_position_id = GRW_industry_effort
+		x = -2
+		y = 1
+		completion_reward = {
+			add_timed_idea = { idea = GRW_fortification_focus days = 2500 }
+		}
+	}
+	focus = {
+		id = GRW_national_guard_focus
+		icon = GFX_focus_chi_legislative_yuan
+		cost = 10.00
+		prerequisite = {
+			focus = GRW_protection_from_enemies
+			focus = GRW_focus_on_defense
+		}
+		ai_will_do = {
+			factor = 2
+		}
+		relative_position_id = GRW_industry_effort
+		x = -1
+		y = 2
+		completion_reward = {
+			add_ideas = GRW_national_guard
+		}
+	}
+	focus = {
+		id = GRW_innovation_focus_protec
+		icon = GFX_focus_research
+		cost = 10.00
+		prerequisite = {
+			focus = GRW_industry_effort
+		}
+		ai_will_do = {
+			factor = 2
+		}
+		relative_position_id = GRW_industry_effort
+		x = -4
+		y = 1
+		completion_reward = {
+			add_ideas = GRW_research_center_idea
+		}
+	}
+	focus = {
+		id = GRW_modernization_protec_focus
+		icon = GFX_goal_socialist_science
+		cost = 10.00
+		prerequisite = {
+			focus = GRW_innovation_focus_protec
+		}
+		ai_will_do = {
+			factor = 2
+		}
+		relative_position_id = GRW_industry_effort
+		x = -3
+		y = 2
+		completion_reward = {
+			add_tech_bonus = {
+				name = industry_bonus
+				bonus = 0.5
+				uses = 2
+				category = industry
+			}
+			custom_effect_tooltip = modernization_available_now
+			set_country_flag = modernization_available
+		}
+	}
+	focus = {
+		id = GRW_electronics_concern
+		icon = GFX_goal_stg_electricity
+		cost = 10.00
+		prerequisite = {
+			focus = GRW_innovation_focus_protec
+		}
+		ai_will_do = {
+			factor = 2
+		}
+		relative_position_id = GRW_industry_effort
+		x = -5
+		y = 2
+		completion_reward = {
+			add_tech_bonus = {
+				name = industry_bonus
+				bonus = 0.5
+				uses = 2
+				category = electronics
+			}
+		}
+	}
 	focus = {
 		id = GRW_exansionism
 		icon = GFX_goal_ideology_totalist
@@ -1357,8 +1478,9 @@ focus_tree = {
 		prerequisite = {
 			focus = GRW_fight_the_bandits
 		}
-		x = 14
-		y = 3
+		x = 0
+		y = 1
+		relative_position_id = GRW_fight_the_bandits
 		available = {
 			owns_state = 490
 		}
@@ -1632,7 +1754,7 @@ focus_tree = {
 		y = 16
 		completion_reward = {
 			increase_society_development_gradual = yes
-			unlock_decision_tooltip = GRW_transformation_to_modern_society
+			unlock_decision_tooltip = GRW_to_modern_society
 		}
 	}
 	focus = {
