@@ -5,6 +5,7 @@
 ### GetNameAdj
 ### GetName
 ### GetLeader
+
 GRW_Cynthia:0 "Cyntia"
 GRW_Murkfeathers:0 "Murkfeathers"
 GRW_Dakaran_Begone:0 "Dakaran Begone"
@@ -1120,3 +1121,21 @@ gryphus.101.t:0 "Support our allies"
 gryphus.101.d:0 "As the our neighbour has been attacked by [GRW.GetName], we shall not wait until the come to us and strike back first."
 gryphus.101.a:0 "That's right"
 gryphus.101.b:0 "No"
+
+
+GRW_fortification_focus:0 "Fortification Focus"
+GRW_fortification_focus_desc:0 "Defend our nations with forts!"
+GRW_national_guard:0 "National Guard"
+GRW_focus_on_defense:0 "Focus on Defense"
+GRW_focus_on_defense_desc:0 "Expansion of our military potential will keep the nasty neighbours out."
+GRW_protection_from_enemies:0 "Protection from Enemies"
+GRW_protection_from_enemies_desc:0 "Feudal enemies are all around us, we shall stand strong as a beakon of freedom."
+GRW_national_guard_focus:0 "Establish the National Guard"
+GRW_national_guard_focus_desc:0 "Form the elite army force to guard our borders."
+GRW_research_center_idea:0 "Sydia Technical Institute"
+GRW_modernization_protec_focus:0 "Modernization of Prywhen"
+GRW_modernization_protec_focus_desc:0 "Keep up with latest technologies in the world"
+GRW_innovation_focus_protec:0 "Bet on Automation"
+modernization_available_now:0 "Modernization will be available through decisions"
+modernization_available:0 "Modernization unlocked"
+GRW_electronics_concern:0 "Prywhen Electronics"
