@@ -1157,3 +1157,15 @@ GRW_rename_kivessin_to_redgladin_desc:0 "Товарищ Редглад пал с
 redglad_is_dead:0 "Редглад умер"
 
 counter_revolution_successful:0 "Контрреволюция удалась."
+
+GRW_fortification_focus:0 "Фокус на Форты"
+GRW_national_guard:0 "Национальная Гвардия"
+GRW_focus_on_defense:0 "Фокус на Защиту"
+GRW_protection_from_enemies:0 "Защита от Врагов"
+GRW_national_guard_focus:0 "Основать Национальную Гвардию"
+GRW_research_center_idea:0 "Сидийский Технический"
+GRW_modernization_protec_focus:0 "Модернизация Прайвена"
+GRW_innovation_focus_protec:0 "Поставить на Автоматизацию"
+modernization_available_now:0 "Модернизация будет доступна через решения"
+modernization_available:0 "Модернизация доступна"
+GRW_electronics_concern:0 "Прайвенская Электроника"
