@@ -15,6 +15,7 @@
 ✢ Griffonian Republic can no longer annex Equestria diplomatically
 ✢ Griffonian Republic can actually switch to Harmony
 ✢ President-Marshal Kemerskai is the prettiest bird in the world.
+✢ Expansion of Prywhen's Isolationist path
 ✢ Fixed even MORE crash to desktop errors.
 ✢ Nightmare Moon Supporters now actually gain cores on all of Equestria if they restore the Lunar Empire instead of the failed Lunar Empire getting them.
 ✢ Everyone hates Maarites again.
